--- a/buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/buzzfeed/src/app/components/quizz/quizz.component.html
@@ -4,18 +4,18 @@
     <h3>{{ title }}</h3>
   </div>
 
-  <div class="quizz_questions">
+  <div *ngIf="!finished" class="quizz_questions">
     <h3>{{ questionSelected.question }}</h3>
   </div>
 
-  <div class="quizz_options">
-    <button class="btn-option">
-      optionName
+  <div *ngIf="!finished" class="quizz_options">
+    <button *ngFor="let option of questionSelected.options; let i = index" (click) = "playerChoice(option.alias)" class="btn-option">
+      {{ option.name }}
     </button>
   </div>
 
   <div *ngIf=finished class="quizz_results">
-    <h1>o seu resultado é:</h1>
-    <p>resposta selecionada</p>
+    <h1>O seu resultado é:</h1>
+    <p>{{ answerSelected }}</p>
   </div>
 </div>
