--- a/buzzfeed/src/app/components/quizz/quizz.component.css
+++ b/buzzfeed/src/app/components/quizz/quizz.component.css
@@ -51,6 +51,7 @@
   padding: 16px 31px;
   text-decoration: none;
   text-shadow: 0 1px 0 #2f6627;
+  margin: 10px;
 }
 
 .btn-option:hover {
@@ -64,7 +65,7 @@
 
 .quizz_results {
   width: 100%;
-  height: 360px;
+  height: 200px;
   background-color: #1f0539;
   border-radius: 10px;
   padding: 30px;
@@ -72,4 +73,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+}
+
+.quizz_results p {
+  margin: 30px 0;
+  font-size: large;
 }
