improving routes and adding about, accommodations and contact pages

--- a/hotel/src/app/pages/home/home.component.html
+++ b/hotel/src/app/pages/home/home.component.html
@@ -5,26 +5,28 @@
         <img
           id="imagem-fundo"
           class="imagem-header"
-          src=""
+          src="https://raw.githubusercontent.com/rtof83/t.ex-projetos/main/desafio-02/images/beach-full.jpg"
           alt="imagem aleatória de capa"
         />
       </div>
   
   
       <div class="home__title">
-        <div class="home__title__logo">
+        <!-- <div class="home__title__logo">
           <img src="@/assets/images/beach-svgrepo-com.svg" />
-        </div>
+        </div> -->
         <div class="home__title__logo-name">
           <h1>Atlantic Hotel</h1>
         </div>
       </div>
       <div class="home__menu-hb">
-        <img src="@/assets/images/hamburger-menu-24.png" alt="menu hamburguer" />
+        <img src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/hamburger-menu-24.png" alt="menu hamburguer" />
       </div>
     </header>
+
+    <app-menu-home></app-menu-home>
   
-    <nav class="nav_home">
+    <!-- <nav class="nav_home">
       <ul>
         <li><a to="/">Home</a></li>
         <li><a to="/about">O Hotel</a></li>
@@ -33,7 +35,7 @@
         <li><a to="/contact">Contato</a></li>
         <li><a to="/login">Login</a></li>
       </ul>
-    </nav>
+    </nav> -->
   
     <main>
       <section class="container">
@@ -64,7 +66,7 @@
             </div>
             <div class="container__white-bg__about__recepcao">
               <img
-                src="@/assets/images/recepcao_hotel.jpg"
+                src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/recepcao_hotel.jpg"
                 alt="recepção do hotel"
               />
             </div>
@@ -80,25 +82,25 @@
             <div class="container__section2__cards__card">
               <div to="/">
                 <h3>Spa Wellness</h3>
-                <img src="@/assets/images/SPA.jpg" alt="spa" />
+                <img src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/SPA.jpg" alt="spa" />
               </div>
             </div>
             <div class="container__section2__cards__card">
               <div to="/reservations">
                 <h3>Quartos</h3>
-                <img src="@/assets/images/quarto.jpg" alt="quarto" />
+                <img src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/quarto.jpg" alt="quarto" />
               </div>
             </div>
             <div class="container__section2__cards__card">
               <div to="/">
                 <h3>Gastronomia</h3>
-                <img src="@/assets/images/gastronomia.jpg" alt="gastronomia" />
+                <img src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/gastronomia.jpg" alt="gastronomia" />
               </div>
             </div>
             <div class="container__section2__cards__card">
               <div to="/">
                 <h3>Experiências</h3>
-                <img src="@/assets/images/experiencias.jpg" alt="experiencia" />
+                <img src="https://raw.githubusercontent.com/rtof83/tex-js-grupo4/dev/src/assets/images/experiencias.jpg" alt="experiencia" />
               </div>
             </div>
           </div>
@@ -153,4 +155,5 @@
     </main>
   
     <!-- <FooterComponent /> -->
+    <app-footer></app-footer>
 </div>
