--- a/hotel/src/app/pages/home/home.component.css
+++ b/hotel/src/app/pages/home/home.component.css
@@ -1,14 +1,3 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Della+Respira&family=Forum&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Forum&family=Italiana&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Italiana", serif;
-  box-sizing: border-box;
-  line-height: 2;
-}
-
 p {
   font-family: "Della Respira", serif;
   font-size: 1.3rem;
@@ -152,7 +141,7 @@ p {
   height: 280px;
 }
 
-.nav_home ul, .container__local__links ul, .rodape__links__termos ul li, .rodape__links__sobre-nos ul li, .rodape__links__navegacao ul li {
+/* .nav_home ul, .container__local__links ul, .rodape__links__termos ul li, .rodape__links__sobre-nos ul li, .rodape__links__navegacao ul li {
   list-style: none;
 }
 
@@ -162,21 +151,22 @@ p {
 
 .nav_home, .container__white-bg__subtitle, .container__section2__subtitle, .container__section2__cards__card h3, .container__local__subtitle {
   text-transform: uppercase;
-}
+} */
 
 .home__title__logo-name h1, .container__white-bg__subtitle, .container__white-bg__about div:nth-child(1) p, .container__section2__subtitle, .container__local__subtitle, .container__local p {
   text-align: center;
 }
 
-footer {
+/* footer {
   padding-top: 2rem;
   background-color: #f1eab9;
 }
+
 footer h3 {
   font-size: 1.5rem;
-}
+} */
 
-.rodape {
+/* .rodape {
   display: flex;
   justify-content: space-between;
   margin: 0 150px;
@@ -213,9 +203,9 @@ footer h3 {
   background-color: rgba(24, 33, 89, 0.5725490196);
   color: #fff;
   border-radius: 5px;
-}
+} */
 
-#redes-sociais a:hover {
+/* #redes-sociais a:hover {
   padding: 5px;
   background-color: #f1eab9;
   color: #fff;
@@ -224,11 +214,11 @@ footer h3 {
 #redes-sociais img {
   width: 35px;
   border-radius: 20px;
-}
+} */
 
 /* --------------  RESPONSIVIDADE ----------------  */
 /* TABLET LANDSCAPE */
-@media (max-width: 1194px) and (orientation: landscape) {
+/* @media (max-width: 1194px) and (orientation: landscape) {
   footer h3 {
     font-size: 1.2rem;
   }
@@ -236,9 +226,9 @@ footer h3 {
     margin: 0 80px;
     padding-bottom: 10px;
   }
-}
+} */
 /* TABLET PORTRAIT */
-@media (max-width: 1024px) and (orientation: portrait) {
+/* @media (max-width: 1024px) and (orientation: portrait) {
   footer h3 {
     font-size: 1.2rem;
   }
@@ -249,9 +239,9 @@ footer h3 {
   .rodape__links {
     gap: 20px;
   }
-}
+} */
 /* MOBILE LANDSCAPE */
-@media (max-width: 915px) and (orientation: landscape) {
+/* @media (max-width: 915px) and (orientation: landscape) {
   footer h3 {
     font-size: 1.2rem;
   }
@@ -262,9 +252,9 @@ footer h3 {
   .rodape__links {
     gap: 20px;
   }
-}
+} */
 /* MOBILE PORTRAIT */
-@media (max-width: 414px) and (orientation: portrait) {
+/* @media (max-width: 414px) and (orientation: portrait) {
   footer {
     font-size: 0.5rem;
   }
@@ -304,7 +294,7 @@ footer h3 {
   footer .rodape__seta__top-btn img {
     width: 2rem;
   }
-}
+} */
 /* --------------  HEADER ----------------  */
 .home {
   width: 100vw;
@@ -313,7 +303,7 @@ footer h3 {
   justify-content: center;
   background-color: transparent;
 }
-.home__painel-usuario {
+/* .home__painel-usuario {
   background-color: #f5f5f5;
   position: absolute;
   justify-content: center;
@@ -324,7 +314,7 @@ footer h3 {
   padding: 1rem;
   border-radius: 0.3rem;
   box-shadow: 2px 2px 5px #999;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 .home__painel-usuario__painel-sair {
   display: flex;
@@ -334,16 +324,16 @@ footer h3 {
   margin-top: 0.5rem;
   width: 100%;
   font-weight: bold;
-}
+} */
 .home__background {
   display: flex;
   position: absolute;
   right: 0;
   bottom: 0;
   z-index: -1;
-  opacity: 0.6;
+  opacity: 0.7;
 }
-.home__slogan {
+/* .home__slogan {
   position: absolute;
   bottom: 15%;
 }
@@ -352,7 +342,7 @@ footer h3 {
   font-weight: bold;
   font-size: 3rem;
   text-shadow: 2px 2px 5px #000;
-}
+} */
 .home__title {
   display: flex;
   align-items: center;
@@ -375,7 +365,7 @@ footer h3 {
 }
 
 /* --------------  NAVBAR  ----------------  */
-.nav_home {
+/* .nav_home {
   z-index: 1;
   width: 100vw;
   position: fixed;
@@ -410,7 +400,7 @@ footer h3 {
   background-color: rgb(233, 223, 223);
   margin-top: 0;
   transition: 0.5s all ease-in-out;
-}
+} */
 
 /* --------------  MAIN  ----------------  */
 .container {
@@ -669,7 +659,7 @@ footer h3 {
   .home__title__logo-name h1::first-letter {
     font-size: 4rem;
   }
-  .nav_home {
+  /* .nav_home {
     width: 150px;
     position: absolute;
     display: none;
@@ -685,7 +675,7 @@ footer h3 {
   }
   .nav_home ul li a {
     border-bottom: 1px solid black;
-  }
+  } */
   .container {
     width: 100vw;
   }
