--- a/hotel/src/styles.css
+++ b/hotel/src/styles.css
@@ -1,1 +1,84 @@
 /* You can add global styles to this file, and also import other style files */
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Della+Respira&family=Forum&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Forum&family=Italiana&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Italiana", serif;
+  box-sizing: border-box;
+  line-height: 2;
+}
+
+.nav_home {
+  z-index: 1;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  margin-top: 2rem;
+}
+.nav_home:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+.nav_home ul {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.5rem;
+}
+.nav_home ul li a {
+  display: block;
+  color: #000;
+  font-size: 1.4rem;
+  padding: 0 1.5rem;
+  border-radius: 0.2rem;
+  font-weight: 900;
+}
+.nav_home ul li a:hover {
+  background-color: rgba(24, 33, 89, 0.5725490196);
+  color: #fff;
+  border-radius: 5px;
+  transition: 0.3s all ease-in-out;
+}
+
+.nav-colorida {
+  background-color: rgb(233, 223, 223);
+  margin-top: 0;
+  transition: 0.5s all ease-in-out;
+}
+
+.nav_home ul, .container__local__links ul, .rodape__links__termos ul li, .rodape__links__sobre-nos ul li, .rodape__links__navegacao ul li {
+  list-style: none;
+}
+
+.nav_home ul li a, .container__local__links ul li a, .rodape__links__termos ul li a, .rodape__links__sobre-nos ul li a, .rodape__links__navegacao ul li a {
+  text-decoration: none;
+}
+
+.nav_home, .container__white-bg__subtitle, .container__section2__subtitle, .container__section2__cards__card h3, .container__local__subtitle {
+  text-transform: uppercase;
+}
+
+
+/* MOBILE PORTRAIT */
+@media (max-width: 414px) and (orientation: portrait) {
+  .nav_home {
+      width: 150px;
+      position: absolute;
+      display: none;
+      background-color: rgb(233, 223, 223);
+      margin-top: 0;
+    }
+    .nav_home ul {
+      flex-direction: column;
+      gap: 0;
+      padding: 0.5rem;
+      margin: 1rem 0;
+      text-transform: capitalize;
+    }
+    .nav_home ul li a {
+      border-bottom: 1px solid black;
+    }
+}
